--- a/app/src/main/res/layout/activity_justify_alignment.xml
+++ b/app/src/main/res/layout/activity_justify_alignment.xml
@@ -14,9 +14,9 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
+        <WebView
             android:id="@+id/JustifyAlignmentActivity_textView"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
             android:text="New Text" />
