--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,16 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:textColor">#000</item>
+        <item name="android:dropDownSelector">@android:color/black</item>
     </style>
+
+    <style name="spinner_style">
+
+        <item name="android:dropDownSelector">@android:color/black</item>
+        <item name="android:textColor">#000</item>
+    </style>
+
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
