added toolbar to the NoteList Activity

--- a/app/src/main/res/layout/activity_note_list.xml
+++ b/app/src/main/res/layout/activity_note_list.xml
@@ -4,21 +4,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.nimgade.pk.mytutorialapplication.MainActivity">
+    tools:context="activities.list.first.NoteListActivity">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context="activities.list.first.NoteListActivity">
+        android:orientation="vertical">
 
+        <include layout="@layout/my_custom_toolbar" />
 
-        <ListView
-            android:id="@+id/NoteListActivity_listView"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ListView
+                android:id="@+id/NoteListActivity_listView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
     </LinearLayout>
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/NoteListActivity_fab"
