--- a/app/src/main/res/layout/activity_note_edit.xml
+++ b/app/src/main/res/layout/activity_note_edit.xml
@@ -3,20 +3,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical"
     tools:context="activities.list.first.NoteEditActivity">
 
+    <include layout="@layout/my_custom_toolbar" />
 
-    <EditText
-        android:id="@+id/NoteEditActivity_editText"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:layout_margin="4dp"
+        android:gravity="center"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/NoteEditActivity_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Save"
-        android:textAllCaps="false" />
+
+        <EditText
+            android:id="@+id/NoteEditActivity_editText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Element value"
+            android:paddingRight="4dp" />
+
+        <Button
+            android:id="@+id/NoteEditActivity_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Save"
+            android:textAllCaps="false" />
+    </LinearLayout>
 </LinearLayout>
