--- a/app/src/main/res/layout/activity_drag_test.xml
+++ b/app/src/main/res/layout/activity_drag_test.xml
@@ -26,66 +26,55 @@
             android:orientation="vertical"
             android:padding="4dp">
 
-            <ScrollView
+
+            <ImageView
+                android:id="@+id/DragTestActivityActivity_imageView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="100dp"
+                android:layout_margin="4dp"
+                android:src="@drawable/gohan" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
+            <ImageView
+                android:id="@+id/DragTestActivityActivity_imageView2"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_margin="4dp"
+                android:src="@drawable/goku" />
 
-                    <ImageView
-                        android:id="@+id/DragTestActivityActivity_imageView"
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp"
-                        android:layout_margin="4dp"
-                        android:src="@drawable/gohan" />
+            <ImageView
+                android:id="@+id/DragTestActivityActivity_imageView3"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_margin="4dp"
+                android:src="@drawable/gohan" />
 
-                    <ImageView
-                        android:id="@+id/DragTestActivityActivity_imageView2"
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp"
-                        android:layout_margin="4dp"
-                        android:src="@drawable/gohan" />
+            <ImageView
+                android:id="@+id/DragTestActivityActivity_imageView4"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_margin="4dp"
+                android:src="@drawable/goku" />
 
-                    <ImageView
-                        android:id="@+id/DragTestActivityActivity_imageView3"
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp"
-                        android:layout_margin="4dp"
-                        android:src="@drawable/gohan" />
+            <ImageView
+                android:id="@+id/DragTestActivityActivity_imageView5"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_margin="4dp"
+                android:src="@drawable/gohan" />
 
-                    <ImageView
-                        android:id="@+id/DragTestActivityActivity_imageView4"
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp"
-                        android:layout_margin="4dp"
-                        android:src="@drawable/gohan" />
+            <ImageView
+                android:id="@+id/DragTestActivityActivity_imageView6"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_margin="4dp"
+                android:src="@drawable/goku" />
 
-                    <ImageView
-                        android:id="@+id/DragTestActivityActivity_imageView5"
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp"
-                        android:layout_margin="4dp"
-                        android:src="@drawable/gohan" />
-
-                    <ImageView
-                        android:id="@+id/DragTestActivityActivity_imageView6"
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp"
-                        android:layout_margin="4dp"
-                        android:src="@drawable/gohan" />
-
-                    <ImageView
-                        android:id="@+id/DragTestActivityActivity_imageView7"
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp"
-                        android:layout_margin="4dp"
-                        android:src="@drawable/gohan" />
-
-                </LinearLayout>
-            </ScrollView>
+            <ImageView
+                android:id="@+id/DragTestActivityActivity_imageView7"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_margin="4dp"
+                android:src="@drawable/gohan" />
 
 
         </LinearLayout>
