--- a/app/src/main/res/layout/activity_network_call_list.xml
+++ b/app/src/main/res/layout/activity_network_call_list.xml
@@ -17,7 +17,8 @@
         <ListView
             android:id="@+id/NetworkCallListActivity_ListView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></ListView>
+            android:layout_height="match_parent"
+            android:layout_weight="1"></ListView>
 
     </LinearLayout>
 
