ListView correction to the NetworkCallActivity

--- a/app/src/main/res/layout/activity_post_request.xml
+++ b/app/src/main/res/layout/activity_post_request.xml
@@ -8,6 +8,19 @@
 
     <include layout="@layout/my_custom_toolbar" />
 
-    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
+
+
+        <Button
+            android:id="@+id/PostRequestActivity_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Post"
+            android:textAllCaps="false" />
+    </LinearLayout>
 
 </LinearLayout>
