--- a/app/src/main/res/layout/activity_spinner_test_one.xml
+++ b/app/src/main/res/layout/activity_spinner_test_one.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fafafa"
     android:orientation="vertical"
     tools:context="spinner.list.activities.SpinnerTestOneActivity">
 
@@ -13,6 +14,8 @@
         android:layout_height="match_parent"
         android:layout_margin="4dp"
         android:gravity="center"
+
+
         android:orientation="vertical">
 
 
