--- a/app/src/main/res/layout/activity_spinner_test_two.xml
+++ b/app/src/main/res/layout/activity_spinner_test_two.xml
@@ -37,6 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_margin="4dp"
+            android:layout_weight="1"
             android:scaleType="fitCenter" />
     </LinearLayout>
 
