SqlitTestOneActivity added as example

--- a/app/src/main/res/layout/activity_sqlite_test_one.xml
+++ b/app/src/main/res/layout/activity_sqlite_test_one.xml
@@ -4,20 +4,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="sqlite.list.activity.SqliteListActivity">
+    tools:context="listview.test.activities.SqliteTestOneActivity">
 
     <include layout="@layout/my_custom_toolbar" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
         android:orientation="vertical">
 
-
-        <ListView
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/SqliteTestOneActivity_button"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/SqliteListActivity_listView" />
+            android:text="Save" />
     </LinearLayout>
 
 </LinearLayout>
