--- a/app/src/main/res/layout/activity_sqlite_test_one.xml
+++ b/app/src/main/res/layout/activity_sqlite_test_one.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="listview.test.activities.SqliteTestOneActivity">
+    tools:context="sqlite.list.activity.SqliteTestOneActivity">
 
     <include layout="@layout/my_custom_toolbar" />
 
