added a custom imageView test layout

--- a/app/src/main/res/layout/layout_test_imageview.xml
+++ b/app/src/main/res/layout/layout_test_imageview.xml
@@ -21,6 +21,12 @@
             android:layout_height="match_parent"
             android:scaleType="fitXY"
             android:src="@drawable/triangle_shape_left" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"
+            android:src="@drawable/triangle_shape_right" />
     </FrameLayout>
 
 </LinearLayout>
