--- a/app/src/main/res/layout/activity_test_layout.xml
+++ b/app/src/main/res/layout/activity_test_layout.xml
@@ -40,6 +40,13 @@
                     android:inputType="textMultiLine"
                     android:lineSpacingMultiplier="1"
                     android:maxLines="10" />
+
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/OneTimesTables"
+                    
+                    android:id="@+id/spinner" />
             </LinearLayout>
 
             <LinearLayout
