--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,4 +28,30 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="TestOne">
+        <item name="android:textColor">#00aa22</item>
+        <item name="android:fontFamily">sans-serif</item>
+    </style>
+
+    <style name="TestTwo">
+        <item name="android:textColor">#00aacc</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+    </style>
+
+    <style name="TestThree">
+        <item name="android:textColor">#ddaa00</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
+    </style>
+
+    <style name="TestFour">
+        <item name="android:textColor">#bbaa00</item>
+        <item name="android:fontFamily">sans-serif-thin</item>
+    </style>
+
+    <style name="TestFive">
+        <item name="android:textColor">#00aabb</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+    </style>
+
+
 </resources>
