checking sliding animation

--- a/app/src/main/res/layout/activity_dropping_view.xml
+++ b/app/src/main/res/layout/activity_dropping_view.xml
@@ -34,6 +34,7 @@
                     android:id="@+id/myimage1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:contentDescription="some test image"
                     android:src="@mipmap/ic_launcher" />
             </LinearLayout>
 
