--- a/app/src/main/res/layout/activity_parse_json.xml
+++ b/app/src/main/res/layout/activity_parse_json.xml
@@ -14,14 +14,40 @@
         android:layout_margin="4dp"
         android:orientation="vertical">
 
-
-        <Button
-            android:id="@+id/ParseJSONActivity_ok_button"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="Parse JSON"
-            android:textAllCaps="false" />
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/ParseJSONActivity_Previous_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
+                android:text="Previous"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/ParseJSONActivity_ok_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
+                android:text="Parse JSON"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/ParseJSONActivity_next_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
+                android:text="Next"
+                android:textAllCaps="false" />
+
+        </LinearLayout>
+
 
         <ListView
             android:id="@+id/ParseJSONActivity_listView"
