--- a/app/src/main/res/layout/activity_google_map_test_two.xml
+++ b/app/src/main/res/layout/activity_google_map_test_two.xml
@@ -8,5 +8,21 @@
 
     <include layout="@layout/my_custom_toolbar" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="4dp"
+        android:orientation="vertical">
+
+        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/GoogleMapTestTwoActivity_map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context="google.map.list.activities.GoogleMapTestOneActivity" />
+
+    </LinearLayout>
+
 
 </LinearLayout>
