--- a/app/src/main/res/layout/activity_test_thread.xml
+++ b/app/src/main/res/layout/activity_test_thread.xml
@@ -9,6 +9,7 @@
     <include layout="@layout/my_custom_toolbar" />
 
     <LinearLayout
+        android:id="@+id/TestThreadActivity_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="4dp"
