--- a/app/src/main/res/layout/activity_google_map_test_three.xml
+++ b/app/src/main/res/layout/activity_google_map_test_three.xml
@@ -14,12 +14,13 @@
         android:layout_margin="4dp"
         android:orientation="vertical">
 
-        <com.google.android.gms.maps.MapView
-            android:id="@+id/GoogleMapTestThreeActivity_mapView"
+        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/GoogleMapTestThreeActivity_map"
+            android:name="com.google.android.gms.maps.MapFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent" />
 
-        </com.google.android.gms.maps.MapView>
+
     </LinearLayout>
 
 </LinearLayout>
