--- a/app/src/main/res/layout/single_item_listview_seven_check_box.xml
+++ b/app/src/main/res/layout/single_item_listview_seven_check_box.xml
@@ -14,6 +14,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
+        android:textColor="@android:color/black"
         android:layout_weight="0.5"
         android:text="check" />
 
@@ -24,5 +25,6 @@
         android:layout_margin="4dp"
         android:layout_weight="0.5"
         android:text="item"
+        android:textColor="@android:color/black"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 </LinearLayout>
